# labelo

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/labelo/: config.rs  image_provider.rs  labelo.rs  mod.rs
